--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -25,5 +25,5 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: test
-    projects: '**/*Tests/*.csproj'
+    projects: '**/*Test.Unit/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
