--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -23,9 +23,31 @@ steps:
     command: build
     projects: '**/*.csproj'
   displayName: 'Build'
+#- task: DotNetCoreCLI@2
+#  inputs:
+#    command: test
+#    projects: '**/*Test.Unit/*.csproj'
+#    arguments: '--configuration $(buildConfiguration)'
+#  displayName: 'Tests'
 - task: DotNetCoreCLI@2
   inputs:
     command: test
     projects: '**/*Test.Unit/*.csproj'
-    arguments: '--configuration $(buildConfiguration)'
+    arguments: -c $(BuildConfiguration) --settings $(System.DefaultWorkingDirectory)/CodeCoverage.runsettings --collect:"XPlat Code Coverage" -- RunConfiguration.DisableAppDomain=true
   displayName: 'Tests'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: custom
+    custom: tool
+    arguments: install --tool-path . dotnet-reportgenerator-globaltool
+  displayName: Install ReportGenerator tool
+  
+- script: ./reportgenerator -reports:$(Agent.TempDirectory)/**/coverage.cobertura.xml -targetdir:$(Build.SourcesDirectory)/coverlet/reports -reporttypes:"Cobertura"
+  displayName: Create reports
+  
+- task: PublishCodeCoverageResults@1
+  displayName: 'Publish code coverage'
+  inputs:
+    codeCoverageTool: Cobertura
+    summaryFileLocation: $(Build.SourcesDirectory)/coverlet/reports/Cobertura.xml 
