--- a/IntroTdd/IntroTdd.Web/Properties/launchSettings.json
+++ b/IntroTdd/IntroTdd.Web/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50337",
-      "sslPort": 44317
+      "applicationUrl": "http://localhost:52443",
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -21,19 +21,13 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "http://localhost:5000"
     },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-      "environmentVariables": {
-        "ASPNETCORE_URLS": "https://+:443;http://+:80",
-        "ASPNETCORE_HTTPS_PORT": "44318"
-      },
-      "httpPort": 50343,
-      "useSSL": true,
-      "sslPort": 44318
+      "publishAllPorts": true
     }
   }
 }
