--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -42,8 +42,16 @@ steps:
     summaryFileLocation: '$(Build.SourcesDirectory)/CodeCoverage/Cobertura.xml'
 
 - task: DotNetCoreCLI@2
+  displayName: 'Publish Web Project'
   inputs:
     command: publish
     publishWebProjects: True
     arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: True
+
+- task: AzureWebApp@1
+displayName: 'Deploy Web Project'
+  inputs:
+    azureSubscription: 'Azure Connection'
+    appName: 'Introduccion CI'
+    package: $(System.ArtifactsDirectory)/**/*.zip  
