Faltaba el _ del _Layout.cshtml

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -17,7 +17,7 @@ steps:
 - task: replacetokens@3
   inputs:
     rootDirectory: '$(System.DefaultWorkingDirectory)'
-    targetFiles: '**/IntroTdd.Web/Views/Shared/Layout.cshtml'
+    targetFiles: '**/IntroTdd.Web/Views/Shared/_Layout.cshtml'
     encoding: 'auto'
     writeBOM: true
     actionOnMissing: 'warn'
