--- a/IntroTdd/IntroTdd.Web/IntroTdd.Web.csproj
+++ b/IntroTdd/IntroTdd.Web/IntroTdd.Web.csproj
@@ -9,6 +9,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IntroTdd.Domain\IntroTdd.Domain.csproj" />
+  </ItemGroup>
+
 
 
 </Project>
